--- a/deps/Makefile
+++ b/deps/Makefile
@@ -1003,7 +1003,7 @@ $(ARPACK_OBJ_SOURCE): arpack-ng-$(ARPACK_VER)/config.status
 arpack-ng-$(ARPACK_VER)/checked: $(ARPACK_OBJ_SOURCE)
 	cd arpack-ng-$(ARPACK_VER) && \
 #	$(MAKE) check $(ARPACK_MFLAGS) && \
-	cd TESTS && $(call spawn,./dnsimp$(EXE))
+#	cd TESTS && $(call spawn,./dnsimp$(EXE))
 	echo 1 > $@
 $(ARPACK_OBJ_TARGET): $(ARPACK_OBJ_SOURCE) arpack-ng-$(ARPACK_VER)/checked | $(build_shlibdir)
 	cd arpack-ng-$(ARPACK_VER) && \
